--- a/app/src/main/res/layout/wave_context.xml
+++ b/app/src/main/res/layout/wave_context.xml
@@ -9,10 +9,19 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="@drawable/grey_background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".AudioReceiver"
     tools:showIn="@layout/wave_form">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="15dp"
+        android:gravity="center"
+        android:text="Activate Microphone and play morse code!"
+        android:textSize="29dp"
+        android:textColor="#ffff"
+        android:fontFamily="@font/computer"/>
 
     <com.myapplication.WaveformView
         android:id="@+id/waveformView"
@@ -23,38 +32,27 @@
         app:mode="RECORDING" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
-        android:text="Avg Frequency Level Per Audio Buffer:"
-        android:textSize="20dp"
-        android:textColor="#ffff"/>
+        android:fontFamily="@font/computer"
+        android:gravity="center"
+        android:text="Morse Output:"
+        android:textColor="#ffff"
+        android:textSize="35dp" />
 
-    <TextView
-        android:id="@+id/avgFreq"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="30dp"
-        android:textColor="#ffff"/>
+    <!--<TextView-->
+        <!--android:id="@+id/avgFreq"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text=""-->
+        <!--android:textSize="30dp"-->
+        <!--android:textColor="#ffff"/>-->
 
     <TextView
         android:id="@+id/morseCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Morse Output"
-        android:textColorHint="#ffff"
+        android:layout_width="378dp"
+        android:layout_height="268dp"
         android:textColor="#ffff"
         android:textSize="30dp" />
-
-    <!--<com.myapplication.WaveformView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_weight="1"-->
-        <!--app:mode="PLAYBACK"-->
-        <!--app:waveformStrokeThickness="3"-->
-        <!--app:waveformColor="#e5dc33"-->
-        <!--app:waveformFillColor="#e93519"-->
-        <!--android:background="#000000"-->
-        <!--android:id="@+id/playbackWaveformView" />-->
 
 </LinearLayout>
