--- a/app/src/main/res/layout/to_morse.xml
+++ b/app/src/main/res/layout/to_morse.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/grey_background" >
@@ -150,8 +151,8 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/index"
-        android:layout_width="41dp"
-        android:layout_height="42dp"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -161,10 +162,10 @@
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.991"
+        app:layout_constraintHorizontal_bias="0.974"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.995"
+        app:layout_constraintVertical_bias="0.983"
         app:srcCompat="@drawable/help" />
 
 </android.support.constraint.ConstraintLayout>
